fix(select): prevent value to appear behind caret

--- a/packages/ods/src/components/select/src/components/ods-select/ods-select.scss
+++ b/packages/ods/src/components/select/src/components/ods-select/ods-select.scss
@@ -158,12 +158,12 @@ $select-padding-right: $select-caret-size + ($select-base-padding * 2);
           @include icon.ods-icon();
 
           position: absolute;
-          top: 50%;
-          right: $select-base-padding;
+          right: 0;
           transform: translateY(-50%);
           margin: 0;
           border: none;
           background-color: inherit;
+          padding: $select-base-padding;
           width: auto;
           height: auto;
           color: var(--ods-color-primary-500);
